syntax = "proto3"

package gradido;

import "Transfer.proto";
import "StateCreateGroup.proto";
import "StateGroupChangeParent.proto";

message TransactionBody {
	string memo = 1; // max 150 chars
	oneof data {
		StateCreateGroup createGroup = 2;
		StateGroupChangeParent groupChangeParent = 3;
		Transfer transfer = 4;
	}
}